add shortcut for dmenu-countdown

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -263,6 +263,9 @@ bindsym $Altgr+v exec /usr/local/bin/dmenu-vbox
 # tell:
 bindsym $Altgr+t exec /usr/local/bin/dmenu-tell
 
+# dmenu-coundown:
+bindsym $Altgr+c exec /usr/local/bin/dmenu-countdown
+
 # screenshot: ImpPt
 bindcode 107 exec /usr/local/bin/screenshot
 # selective screenshot: Shift+ImpPt
