format help text

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -53,7 +53,7 @@ set $Altgr Mod5
 floating_modifier $Win
 
 # help
-bindsym F1 exec /usr/local/bin/i3-help
+bindsym F1 exec /usr/local/bin/minos-help
 
 # fullscreen mode ($Win+f)
 bindcode $Win+41 fullscreen
