--- a/.i3/config.4
+++ b/.i3/config.4
@@ -330,6 +330,7 @@ for_window [title="^TeamViewer$"] floating enable
 for_window [title="- TeamViewer -"] floating enable
 for_window [class="Firefox" title="^About.*"] floating enable
 for_window [class="realvnc-vncviewer"] floating enable
+for_window [class="Xarchiver" title="Xarchiver$"] floating enable
 
 # popup_during_fullscreen <smart|ignore|leave_fullscreen> smart is default
 #popup_during_fullscreen ignore
